--- a/package.json
+++ b/package.json
@@ -28,12 +28,9 @@
     "express": "^4.18.2",
     "mongoose": "^8.1.0",
     "prisma": "^5.8.1",
-    "protobufjs": "^7.2.6",
-    "zod": "^3.22.4"
+    "protobufjs": "^7.2.6"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.5",
     "dotenv": "^16.3.2",
     "grpc-tools": "^1.12.4",
     "morgan": "^1.10.0",
